feat: Add workout history page. Rework infinite scroll component
