# backend/pkg/workouts/workouts.swagger.json
@@ -816,7 +816,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/workoutWorkoutsListResponse"
+              "$ref": "#/definitions/workoutGetWorkoutsResponse"
             }
           },
           "default": {
@@ -826,6 +826,22 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
         "tags": [
           "WorkoutService"
         ]
@@ -1347,6 +1363,21 @@
     }
   },
   "definitions": {
+    "GetWorkoutsResponseWorkoutDetails": {
+      "type": "object",
+      "properties": {
+        "workout": {
+          "$ref": "#/definitions/workoutWorkout"
+        },
+        "exerciseLogs": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/workoutExerciseLog"
+          }
+        }
+      }
+    },
     "RoutineServiceAddExerciseToRoutineBody": {
       "type": "object",
       "properties": {
@@ -1795,6 +1826,18 @@
           "items": {
             "type": "object",
             "$ref": "#/definitions/workoutExerciseLogDetails"
+          }
+        }
+      }
+    },
+    "workoutGetWorkoutsResponse": {
+      "type": "object",
+      "properties": {
+        "workouts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/GetWorkoutsResponseWorkoutDetails"
           }
         }
       }
